<resources>
    <string name="app_name">PracticalTest02</string>
    <string name="server">SERVER</string>
    <string name="server_port">Port</string>
    <string name="connect">Connect</string>
    <string name="client">CLIENT</string>
    <string name="client_address">Address</string>
    <string name="client_port">Port</string>
    <string name="url">URL</string>
    <string name="information_type">Information Type</string>
    <string name="view">View</string>
    <string name="action_settings">Settings</string>
    <string name="textview">Settings</string>
</resources>
